--- a/cell01/ex02/piscineweb.html
+++ b/cell01/ex02/piscineweb.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html>
-
-	<title>Piscine Title</title>
-	<style>
-		h1
-		{
-			text-align: center;
-		}
-	</style>
-
-	<h1>Piscine Web</h1>
+<head>
+    <title>Piscine Title</title>
+</head>
+<body>
+    <h1 align="center">Piscine Web</h1>
+    <table align="center">
+        <tr>
+            <td>
+                <img src="/home/retr0/Downloads/ChatGPT Image Jul 7, 2025, 10_12_49 PM.png" alt="Image 1" width="300">
+            </td>
+            <td>
+                <img src="/home/retr0/Downloads/2ac611bd78c297ac5715982c76a0cfa6.jpg" alt="Image 2" width="300">
+            </td>
+        </tr>
+    </table>
+</body>
 </html>
