cell00 -> cell01(ex02)

--- a/cell01/ex02/piscineweb.html
+++ b/cell01/ex02/piscineweb.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Piscine Title</title>
+    <title>	Piscine Title	</title>
+    <h1>	<center>Piscine Web</center>	</h1>
 </head>
 <body>
-    <h1 align="center">Piscine Web</h1>
     <table align="center">
         <tr>
             <td>
-                <img src="/home/retr0/Downloads/ChatGPT Image Jul 7, 2025, 10_12_49 PM.png" alt="Image 1" width="300">
+                <img src="/home/ppinhao/Downloads/ChatGPT Image Jul 8, 2025, 11_14_05 AM.png" alt="Image 1" width="300">
             </td>
             <td>
-                <img src="/home/retr0/Downloads/2ac611bd78c297ac5715982c76a0cfa6.jpg" alt="Image 2" width="300">
+                <img src="/home/ppinhao/Downloads/2ac611bd78c297ac5715982c76a0cfa6.jpg" alt="Image 2" width="300">
             </td>
         </tr>
     </table>
