--- a/cell01/ex03/piscineweb.html
+++ b/cell01/ex03/piscineweb.html
@@ -2,13 +2,15 @@
 <html>
 <head>
 	<title>	Piscine Title	</title>
-	<h1>	<center>Piscine Web</center>	</h1>
 </head>
 <body>
+	<h1>	<center>Piscine Web</center>	</h1>
 	<table align="center">
 		<tr>
 			<td>
-				<img src="/home/ppinhao/Downloads/ChatGPT Image Jul 8, 2025, 11_14_05 AM.png" alt="Image 1" width="300">
+				<a href="https://www.youtube.com/watch?v=INscMGmhmX4"	height="300"	width="300">
+					<img src="/home/ppinhao/Downloads/ChatGPT Image Jul 8, 2025, 11_14_05 AM.png" alt="Image 1" width="300">
+				</a>
 			</td>
 			<td>
 				<img src="/home/ppinhao/Downloads/2ac611bd78c297ac5715982c76a0cfa6.jpg" alt="Image 2" width="300">
