--- a/cell01/ex01/piscineweb.html
+++ b/cell01/ex01/piscineweb.html
@@ -1,6 +1,15 @@
 !<!DOCTYPE html>
 
-<title>Piscine Web</title>
-<h1>
-    <center>Piscine Web</center>
-</h1>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Piscine Web</title>
+    </head>
+    <body>
+        <h1 style="text-align: center;">
+            Piscine Web
+        </h1>
+</body>
+</html>
