--- a/cell01/ex03/piscineweb.html
+++ b/cell01/ex03/piscineweb.html
@@ -8,7 +8,7 @@
 	<table align="center">
 		<tr>
 			<td>
-				<a href="https://www.youtube.com/watch?v=INscMGmhmX4"	height="300"	width="300">
+				<a href="https://www.youtube.com/watch?v=INscMGmhmX4">
 					<img src="/home/ppinhao/Downloads/ChatGPT Image Jul 8, 2025, 11_14_05 AM.png" alt="Image 1" width="300">
 				</a>
 			</td>
