ex00 (responsive.html && responsive.css)

--- a/cell02/ex00/reponsive.html
+++ b/cell02/ex00/reponsive.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<link rel="stylesheet" href="responsive.css">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Tab</title>
 </head>
-<body>
-	<hr>
-	<table align="center" style="font-size: 200px;">
-		<tr>
-			<th bgcolor="red" rowspan="2" style="color: springgreen;">First cell</th>
-			<th bgcolor="blue" rowspan="2" style="color: springgreen;">Second cell</th>
-		</tr>
-	</table>
+<body style="height: 100vh; width: 100vw; margin: 0px;">
+	<div class="table">
+		<div class="first-cell">First cell</div>
+		<div class="second-cell">Second cell</div>
+	</div>
 </body>
 </html>
