corrected cell01 -> ex04

--- a/cell01/ex04/basics.html
+++ b/cell01/ex04/basics.html
@@ -13,22 +13,22 @@
 	<table align="center">
 		<tr>
 			<td>
-				<a href="https://sockerbit.com/collections/sweet-candy" height="500" width="500">
+				<a>
 					<img src="/home/ppinhao/Downloads/1-2860600189.jpg" alt="spread out gums" height= "500" width="500">
 				</a>
 			</td>
 			<td>
-				<a href="https://cravedcandy.com/" height="500" width="500">
+				<a>
 				<img src="/home/ppinhao/Downloads/OIP-1681144996.jpeg" alt="jar of Candy" height="500" width="500">
 				</a>
 			</td>
 		</tr>
 		<tr>
 			<td>
-				<a>https://sockerbit.com/collections/sweet-candy</a>
+				<a href="https://sockerbit.com/collections/sweet-candy">https://sockerbit.com/collections/sweet-candy</a>
 			</td>
 			<td>
-				<a>/home/ppinhao/Downloads/OIP-1681144996.jpeg</a>
+				<a href="https://cravedcandy.com/">/home/ppinhao/Downloads/OIP-1681144996.jpeg</a>
 			</td>
 		</tr>
 	</table>
