modified cell01/ex06 && cell02/ex02

--- a/cell01/ex06/reponsive.html
+++ b/cell01/ex06/reponsive.html
@@ -11,6 +11,6 @@
 			<th bgcolor="red" rowspan="2" style="color: springgreen; width: 50%;">First cell</th>
 			<th bgcolor="blue" rowspan="2" style="color: springgreen; width: 50%; ">Second cell</th>
 		</tr>
-	</tabzle>
+	</table>
 </body>
 </html>
