parallax finally done...ig

--- a/cell02/ex02/parallax.html
+++ b/cell02/ex02/parallax.html
@@ -6,11 +6,16 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Parallax</title>
 </head>
-<body>
-	<img src=""
-
-
-
+<body style="height: 10vh; width: 100vw; margin: 0px;">
+	<div class="background1" style="height: 100vh; margin: 0;">
+		<p style="font-size: 100px; color: wheat;">A vida</p>
+	</div>
+	<div class="separator" style="font: 100px; color: wheat;">
+		<p style="font-size: 100px; color: wheat;">Sem...</p>
+	</div>
+	<div class="background2" style="height: 100vh; margin: 0;">
+		<p style="font-size: 100px; color: wheat;">seg faults</p>
+	</div>
 
 	
 </body>
