--- a/cell02/ex03/card.html
+++ b/cell02/ex03/card.html
@@ -8,32 +8,39 @@
 	<title>Profile Card</title>
 </head>
 <body>
-	<h1 class="title">Profile Card</h1>
-	<table>
-		<tr>
-			<td class="profile_picture">
-				<img src="/home/ppinhao/Downloads/5c6a9c8c-8434-488d-bf25-2ed37699ff84-3256435404.jpg" alt="stormtrooper" height="200px" width="200px">
-			</td>
-		</tr>
-		<tr>
-			<td>
-				<p class="username">ppinhao</p>
-			</td>
-		</tr>
-		<tr>
-			<td>
-				<p class="description">life is much better without seg faults!</p>
-			</td>
-		</tr>
-		<tr>
-			<td>
-				<a href="https://www.instagram.com/">
-					<img class="social_icon" src="/home/ppinhao/Downloads/3d-social-media-icons-instagram-free-png-1107751221.png" alt="instagram">
-				</a>
-				<a href="https://www.linkedin.com/">
-					<img class="social_icon" src="/home/ppinhao/Downloads/linkedin-logo-free-download-free-png-2267769908.png" alt="linkedin">
-				</a>
-			</td>
-		</tr>
-	</table>
+	<div class="card-container">
+		<h1 class="title">User Profile Card</h1>
+		<table style="text-align: center;" class="card">
+			<tr>
+				<td style="align-content: center;" class="profile_picture">
+					<img src="/home/ppinhao/Downloads/5c6a9c8c-8434-488d-bf25-2ed37699ff84-3256435404.jpg" alt="stormtrooper" height="200px" width="200px">
+				</td>
+			</tr>
+			<tr>
+				<td>
+					<p style="text-align: center;" class="username">ppinhao</p>
+				</td>
+			</tr>
+			<tr>
+				<td>
+					<p class="description">life is much better without seg faults!</p>
+				</td>
+			</tr>
+			<tr>
+				<td>
+					<a href="https://www.instagram.com/">
+						<img class="social_icon" src="/home/ppinhao/Downloads/3d-social-media-icons-instagram-free-png-1107751221.png" alt="instagram">
+					</a>
+					<a href="https://www.linkedin.com/">
+						<img class="social_icon" src="/home/ppinhao/Downloads/linkedin-logo-free-download-free-png-2267769908.png" alt="linkedin">
+					</a>
+				</td>
+			</tr>
+			<tr>
+				<td style="text-align: center;">
+					<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&list=RDdQw4w9WgXcQ&start_radio=1" class="contact-btn">Contact</a>
+				</td>
+			</tr>
+		</table>
+	</div>	
 </body>
