--- a/cell03/ex00/backgroound.html
+++ b/cell03/ex00/backgroound.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<link rel="stylesheet" href="backgroound.css">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>rand bgcolor change</title>
 </head>
 <body>
+	<script src="backgroound.js"></script>
+
 	
 </body>
 </html>
