cell03/ex00 complete

--- a/cell03/ex00/backgroound.html
+++ b/cell03/ex00/backgroound.html
@@ -7,8 +7,7 @@
 	<title>rand bgcolor change</title>
 </head>
 <body>
+	<button id="colorBtn">Click me!</button>
 	<script src="backgroound.js"></script>
-
-	
 </body>
 </html>
